# Projet-programmation-C

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.in  utilisateur_finale.glade  utilisateur_finale.gladep.bak
autom4te.cache/: output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: BureauVote.c  BureauVote.h  Makefile  Makefile.am  Makefile.in  bv.txt  callbacks.c  callbacks.h  fon.c  fon.h  fonction.c  fonction.h  interface.c  interface.c.bak  interface.h  listes_electorales.txt  main.c  rec.txt  utilisateur.c  utilisateur.h  utilisateur.h.gch  utilisateur_finale
